# sqlite-shared-sync

./: .gitignore  LICENSE  README.md  pyproject.toml
sqlite_shared_sync/: __init__.py  backup.py  lock.py  manager.py  meta.py  models.py
tests/: test_sync.py
